<resources>
    <string name="app_name">MediCare</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="registerFailed">Register Failed</string>
    <string name="registerSuccess">Register success</string>
    <string name="usernameAlreadyExist">Username already exist</string>
    <string name="fillInAllFields">Please fill in all fields</string>
    <string name="passwordsNotMatch">Passwords do not match</string>
    <string name="loginFailed">Login failed</string>
    <string name="loginSuccess">Login success</string>
    <string name="invalidUsernameOrPassword">Invalid username or password.</string>
    <string name="loginExpired">Login status has expired, please login again.</string>
    <string name="statusOffline">Cannot connect to server, using the app offline.</string>
    <string name="serverBaseUrl">Server base URL Setting</string>
    <string name="serverBaseUrlDes">Set the base URL of the server, restart app to take effect:</string>
    <string name="restartToTakeEffect">Restart the app to take effect.</string>
    <string name="logout">Logout</string>
    <string name="confirmLogout">Log out from MediCare?</string>
    <string name="back">Return</string>
    <string name="addMedicineBoxInfo">Add medicine box info</string>
    <string name="placeholder">Placeholder</string>
    <string name="physicalMedBoxPhotoHint">(Optional) Click to take a photo of the physical medicine box</string>
    <string name="medicineBoxName">Medicine box name:</string>
    <string name="type">Type:</string>
    <string name="applicablePerson">Applicable Person:</string>
    <string name="optionalRemark">(Optional) Remark:</string>
    <string name="saveInfo">Save Info</string>
    <string name="addMedicineInfo">Add medicine info</string>
    <string name="instructionsPhotoHint">(Optional) Click to take a photo of the instructions of the medicine</string>
    <string name="medicineName">Medicine name</string>
    <string name="medicineUser">Medicine user:</string>
    <string name="medicalRecord">Medical record:</string>
    <string name="dosage">Dosage:</string>
    <string name="remainingAmount">Remaining amount:</string>
    <string name="takingTimesPerDay">Taking times per day</string>
    <string name="selectTakingTimesPerDayList">Select the list of taking times per day</string>
    <string name="frequency">Frequency</string>
    <string name="mondayShortest">M</string>
    <string name="tuesdayShortest">T</string>
    <string name="wednesdayShortest">W</string>
    <string name="thursdayShortest">T</string>
    <string name="fridayShortest">F</string>
    <string name="saturdayShortest">S</string>
    <string name="sundayShortest">S</string>
    <string name="notifyMethod">Notify method</string>
    <string name="calendar">Calendar</string>
    <string name="alarm">Alarm</string>
    <string name="app">App</string>
    <string name="none">None</string>
    <string name="expirationDate">Expiration date:</string>
    <string name="selectExpirationDate">Select expiration date</string>
    <string name="addMedicalRecordInfo">Add medical record info</string>
    <string name="medicalRecordPhotoHint">(Optional) Click to add doctor\'s medical record</string>
    <string name="medicalRecordName">Record name:</string>
    <string name="medicalRecordNameExample">e.g. Child\'s Cold \/ Pharyngitis</string>
    <string name="patient">Patient:</string>
    <string name="timeWithExample">Time:</string>
    <string name="optionalDoctorsOrder">(Opt) Doctor\'s Orders:</string>
    <string name="doctorsOrderExample">e.g. Avoid strenuous exercise / Take vitamin supplements</string>
    <string name="navCalendar">Calendar</string>
    <string name="navMedicineBox">Medi Boxes</string>
    <string name="navMedicalRecord">Medi Records</string>
    <string name="navMe">Me</string>
    <string name="close">Close</string>
    <string name="patientName">Patient name:</string>
    <string name="dosageInfo">Dosage info:</string>
    <string name="dailyIntakeFrequency">Daily intake frequency:</string>
    <string name="searchMedicineBox">Search medicine box</string>
    <string name="filter">Filter</string>
    <string name="addRecord">Add record</string>
    <string name="prevMonth">Previous month</string>
    <string name="monthYear">Month Year</string>
    <string name="nextMonth">Next month</string>
    <string name="toggleSelectionMode">Toggle selection mode</string>
    <string name="singleSelectMode">Single select mode</string>
    <string name="multipleSelectMode">Multiple select mode</string>
    <string name="medicineRecords">Medicine records</string>
    <string name="addMedication">Add medication</string>
    <string name="clickToLogin">Click to login</string>
    <string name="memberManage">Member management</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="searchMedRecord">Search medical record</string>
    <string name="deleteMedicine">Delete medicine</string>
    <string name="diseaseName">Disease name</string>
    <string name="deleteRecord">Delete record</string>
    <string name="addMedicineToMedBox">Add medicine to medicine box</string>
    <string name="time">Time</string>
    <string name="deprecatedCalendarNotify">Calendar notification has deprecated!</string>
    <string name="inputAllMedicineInfo">Please input all medicine info fields</string>
    <string name="failedToSaveMedicineData">Failed to save medicine data</string>
    <string name="reason1">Reason 1</string>
    <string name="selectTimeIndex">Select time %d</string>
    <string name="selectTakingTimesPerDay">Select taking times per day</string>
    <string name="childCold">Child\'s cold</string>
    <string name="family">Family</string>
    <string name="medicineBoxIndex">Medicine Box %d</string>
    <string name="patientIndex">Patient %d</string>
    <string name="multipleSelectEnabled">Multiple selection mode enabled.</string>
    <string name="multipleSelectDisabled">Multiple selection mode disabled.</string>
    <string name="selectDate">Select date</string>
    <string name="selectDateDes">Select a date first to add medicine.</string>
    <string name="notificationTitle">%1s take %2s</string>
    <string name="notificationDetail">Time to take medicine!</string>
    <string name="reminderIndex">Reminder %d</string>
    <string name="alarmNotAvailable">Alarm Clock app not available!</string>
    <string name="dosageWithData">Dosage: %s</string>
    <string name="remainingAmountWithData">Remaining amount: %s</string>
    <string name="dailyIntakeFrequencyWithData">Daily intake frequency: %s</string>
    <string name="expirationDateWithData">Expiration date: %s</string>
    <string name="welcomeMsg">Hello %s! You have already logged in.</string>
    <string name="show">Show</string>
    <string name="medRecordIndex">Medical record %d</string>
    <string name="logoutSuccess">Successfully logged out.</string>
    <string name="deleteSuccess">Successfully deleted</string>
    <string name="addSuccess">Successfully added medication</string>
    <string name="modifySuccess">Successfully modified</string>
</resources>