<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Header to display the current month and year -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal">

        <ImageButton
            style="?android:attr/buttonBarStyle"
            android:id="@+id/buttonPreviousMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/prevMonth"
            android:src="@drawable/calendar_ic_arrow_left"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/textMonthYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/monthYear"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="10dp"/>

        <ImageButton
            style="?android:attr/buttonBarStyle"
            android:id="@+id/buttonNextMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/nextMonth"
            android:src="@drawable/calendar_ic_arrow_right"
            android:padding="10dp"/>
    </LinearLayout>

    <!-- 星期标题栏 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/mondayShortest"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tuesdayShortest"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wednesdayShortest"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/thursdayShortest"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fridayShortest"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/saturdayShortest"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sundayShortest"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>
    </LinearLayout>

    <!-- 灰色分割线 -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCCCCC" />

    <!-- RecyclerView to display dates in a grid format -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCalendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:columnCount="7"
        android:orientation="horizontal" />

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/recyclerViewCalendar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:padding="4dp"-->
<!--        android:clipToPadding="false"-->
<!--        android:layout_marginTop="5dp"-->
<!--        android:scrollbars="none"-->
<!--        android:numColumns="7"-->
<!--        app:spanCount="7"-->
<!--        android:orientation="horizontal"-->
<!--        android:stretchMode="columnWidth" />-->

    <!--    设置自适应layout_height，当月份不足5行时，height应该适当减小-->

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchToggleMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggleSelectionMode"
        android:textOn = "@string/singleSelectMode"
        android:textOff = "@string/multipleSelectMode"
        android:layout_gravity="center_horizontal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCCCCC" />

    <!-- Section for displaying medication records -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medicineRecords"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="14dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewMedication"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:columnCount="1"
            android:nestedScrollingEnabled="false" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buttonAddMedication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:layout_margin="16dp"
            android:clickable="true"
            android:contentDescription="@string/addMedication"
            app:fabCustomSize="48dp"
            app:fabSize="auto"
            app:srcCompat="@drawable/ic_add_circle" />

    </LinearLayout>

</LinearLayout>
