<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FDF9FC"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                style="?android:attr/buttonBarStyle"
                android:id="@+id/buttonBackMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/back"
                android:padding="10dp"
                android:src="@drawable/calendar_ic_arrow_left" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/addMedicineInfo"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:contentDescription="@string/placeholder"
                android:padding="10dp"
                android:src="@drawable/calendar_ic_arrow_left"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instructionsPhotoHint"
                android:textColor="#6C6868"/>

            <ImageButton
                style="?android:attr/buttonBarStyle"
                android:id="@+id/buttonAddPicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_add_picture" />
        </LinearLayout>

        <!-- 灰色分割线 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CCCCCC" />

        <!-- Medication Name -->
        <LinearLayout
            style="@style/CustomInputStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/rounded_gray_background">
            <Space
                android:layout_width="13dp"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medicineName"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/editTextMedicationName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="12dp"
                android:inputType="text"
                android:textSize="16sp"
                android:backgroundTint="@android:color/transparent"/>
        </LinearLayout>

        <!-- Patient Name and Medical Record -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <!-- Patient Name -->
            <LinearLayout
                style="@style/CustomInputStyle"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:background="@drawable/rounded_gray_background">
                <Space
                    android:layout_width="13dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medicineUser"
                    android:textSize="16sp"/>
                <EditText
                    android:id="@+id/editTextPatientName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="12dp"
                    android:inputType="textPersonName"
                    android:textSize="16sp"
                    android:backgroundTint="@android:color/transparent"/>
            </LinearLayout>

            <Space
                android:layout_width="13dp"
                android:layout_height="wrap_content" />

            <!-- Medical Record -->
            <LinearLayout
                style="@style/CustomInputStyle"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:background="@drawable/rounded_gray_background">
                <Space
                    android:layout_width="13dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medicalRecord"
                    android:textSize="16sp"/>
                <EditText
                    android:id="@+id/editTextMedicalRecord"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="12dp"
                    android:inputType="text"
                    android:textSize="16sp"
                    android:backgroundTint="@android:color/transparent"/>
            </LinearLayout>

        </LinearLayout>

        <!-- Dosage and Remaining Amount -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <!-- Dosage -->
            <LinearLayout
                style="@style/CustomInputStyle"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:background="@drawable/rounded_gray_background">
                <Space
                    android:layout_width="13dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dosage"
                    android:textSize="16sp"/>
                <EditText
                    android:id="@+id/editTextDosage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="12dp"
                    android:inputType="text"
                    android:textSize="16sp"
                    android:backgroundTint="@android:color/transparent"/>
            </LinearLayout>

            <Space
                android:layout_width="13dp"
                android:layout_height="wrap_content" />

            <!-- Remaining Amount -->
            <LinearLayout
                style="@style/CustomInputStyle"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:background="@drawable/rounded_gray_background">
                <Space
                    android:layout_width="13dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remainingAmount"
                    android:textSize="16sp"/>
                <EditText
                    android:id="@+id/editTextRemainingAmount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="12dp"
                    android:inputType="number"
                    android:textSize="16sp"
                    android:backgroundTint="@android:color/transparent"/>
            </LinearLayout>

        </LinearLayout>

        <!-- Daily Intake Frequency -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/takingTimesPerDay"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/listButtonDailyIntakeFrequency"
                style="?android:attr/buttonBarStyle"
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:layout_marginLeft="-10dp"
                android:contentDescription="@string/selectTakingTimesPerDayList"
                android:onClick="showDailyIntakeList"
                android:padding="0dp"
                android:src="@drawable/calendar_ic_arrow_right" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/timeSelectionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <!-- Intake Interval (Days) -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/frequency"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/linearLayoutDays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <CheckBox
                android:id="@+id/checkBoxMonday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/mondayShortest" />

            <CheckBox
                android:id="@+id/checkBoxTuesday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/tuesdayShortest" />

            <CheckBox
                android:id="@+id/checkBoxWednesday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/wednesdayShortest" />

            <CheckBox
                android:id="@+id/checkBoxThursday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/thursdayShortest" />

            <CheckBox
                android:id="@+id/checkBoxFriday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/fridayShortest" />

            <CheckBox
                android:id="@+id/checkBoxSaturday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/saturdayShortest" />

            <CheckBox
                android:id="@+id/checkBoxSunday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/sundayShortest" />
        </LinearLayout>

        <!-- Reminder mode -->
        <!-- 支持多选，选择无则全不选 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notifyMethod"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkboxCalendar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calendar"
                android:textSize="16sp"
                android:enabled="false"/>

            <CheckBox
                android:id="@+id/checkboxAlarm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/alarm"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/checkboxAppNotification"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/checkboxNone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/none"
                android:textSize="16sp" />

        </LinearLayout>

        <!-- Expiry Date with DatePicker -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expirationDate"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/editTextExpiryDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@android:drawable/ic_menu_my_calendar"
            android:focusable="false"
            android:hint="@string/selectExpirationDate"
            android:inputType="date"
            android:onClick="showDatePicker" />

        <!-- Submit Button -->
        <Button
            android:id="@+id/buttonSaveMedication"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/saveInfo" />

    </LinearLayout>
</ScrollView>