<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <!-- 搜索栏 -->
        <SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:iconifiedByDefault="false"
            android:queryHint="@string/searchMedicineBox" />

        <ImageButton
            style="?android:attr/buttonBarStyle"
            android:id="@+id/buttonFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:src="@drawable/ic_filter"
            android:contentDescription="@string/filter"/>

    </LinearLayout>

    <!-- 药箱表 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:columnCount="2"
            android:nestedScrollingEnabled="false" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buttonAddBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:layout_margin="16dp"
            android:clickable="true"
            android:contentDescription="@string/addRecord"
            app:fabCustomSize="48dp"
            app:fabSize="auto"
            app:srcCompat="@drawable/ic_add_circle" />

    </LinearLayout>

</LinearLayout>